--- a/t-demo-atom.html
+++ b/t-demo-atom.html
@@ -83,8 +83,9 @@
           </t-button>
         </div>
         <div class="body" active$="{{activated}}">
-          <device-view device="{{device}}" landscape="{{landscape}}">
-            <iframe id="demo" src="{{demoFile}}" frameborder="0" on-load="_iframeLoaded"></iframe>
+          <device-view id="deviceView" device="{{device}}" landscape="{{landscape}}">
+            <!--<iframe id="demo" src="{{demoFile}}" frameborder="0" on-load="_iframeLoaded"></iframe>-->
+            <content select="*"></content>
           </device-view>
           <hr>
           <element-code id="code" el-name="[[elName]]" el-disp-name="[[elDispName]]" el-html="[[elHtml]]" el-dependencies="[[elDependencies]]"
@@ -158,7 +159,7 @@
 
       //listen to the load event of iframe
       listeners: {
-        'demo.load': 'setDemoComponent'
+        //'demo.load': 'setDemoComponent'
       },
 
       ready: function () {
@@ -176,14 +177,20 @@
         }
       },
 
+      attached : function(){
+          this._initPropertyBinding();
+          this.setDemoComponent();
+      },
 
+      _initPropertyBinding: function () {
+        
+        if(!this.elName)
+          return;
 
-      _iframeLoaded: function () {
-        console.log("iframe - element loaded! ");
-        var elm = this.$.demo.contentWindow.document.querySelector(this.elName);
+        var elm = this.$.deviceView.querySelector(this.elName); 
+        // this.$.demo.contentWindow.document.querySelector(this.elName);
         if (!elm)
           return;
-        console.log(elm.properties);
 
         var dataFields = {}, propertyFields = {};
         for (var pname in elm.properties) {
@@ -196,7 +203,11 @@
             name: pname,
             type: translate[pt] || pt,
           };
-          if (p.value != undefined) {
+
+          if(elm[pname]){
+            obj.value = elm[pname];
+          }
+          else if (p.value != undefined) {
             obj.value = p.value
           }
 
@@ -223,7 +234,7 @@
       //the load event is triggered twice, it shouldn't be a problem
       //but why the heck is it triggered twice?.
       setDemoComponent: function () {
-        var iframeDoc, targetComponent;
+        // var iframeDoc, targetComponent;
 
         //the name of the component to find is not available.
         //current method is also called in the `ready` hook
@@ -231,51 +242,55 @@
           return;
         }
 
-        iframeDoc = this.$.demo.contentWindow.document;
-        targetComponent = iframeDoc.querySelector(this.elName);
+        // iframeDoc = this.$.demo.contentWindow.document;
+        var targetComponent = this.$.deviceView.querySelector(this.elName);
 
-        this.initIframe(this.$.demo);
+        // this.initIframe(this.$.demo);
 
         if (targetComponent) {
           this._demoComponent = targetComponent;
           this.applyProperties();
         }
+
+
+        
+
       },
 
       // initialize the demo ifram with iframe resizer script
-      initIframe: function (iframe) {
-        var script, doc, head, url;
+      // initIframe: function (iframe) {
+      //   var script, doc, head, url;
 
-        iFrameResize({
-          checkOrigin: true,
-          heightCalculationMethod: 'bodyScroll',
-          scrolling: true
-        }, iframe);
+      //   iFrameResize({
+      //     checkOrigin: true,
+      //     heightCalculationMethod: 'bodyScroll',
+      //     scrolling: true
+      //   }, iframe);
 
-        doc = iframe.contentWindow.document;
+      //   doc = iframe.contentWindow.document;
 
-        //we need a better way of serving this file
-        url = window.location.origin + '/';
-        url += this.baseurl + '/';
-        url += 'bower_components/iframe-resizer/js/iframeResizer.contentWindow.min.js';
-        url = url.replace(/([^:])\/+/, '$1/');
+      //   //we need a better way of serving this file
+      //   url = window.location.origin + '/';
+      //   url += this.baseurl + '/';
+      //   url += 'bower_components/iframe-resizer/js/iframeResizer.contentWindow.min.js';
+      //   url = url.replace(/([^:])\/+/, '$1/');
 
-        script = doc.createElement('script');
-        script.type = 'text/javascript';
-        script.async = true;
-        script.defer = true;
-        script.src = url;
-        head = doc.querySelector('head');
-        head.appendChild(script);
-      },
+      //   script = doc.createElement('script');
+      //   script.type = 'text/javascript';
+      //   script.async = true;
+      //   script.defer = true;
+      //   script.src = url;
+      //   head = doc.querySelector('head');
+      //   head.appendChild(script);
+      // },
 
       // refresh the iframe of the component demo
       refresh: function () {
-        if (!this._demoComponent || !this.$.demo) {
+        if (!this._demoComponent){ // || !this.$.demo) {
           return;
         }
 
-        this.$.demo.src = this.$.demo.src;
+        // this.$.demo.src = this.$.demo.src;
       },
 
       // check if given property can be changed or not
@@ -347,6 +362,8 @@
       applyProperties: function () {
         //get the custom properties of the element
         var properties = this._demoComponent.properties;
+        if(!properties)
+        return;
         var propertyKeys = Object.keys(properties);
         var panelProperties = this.getPanelProperties();
 
@@ -419,9 +436,8 @@
         this._dsTargets = this._dsTargets || {};
         dsTarget = this._dsTargets[key];
 
-        if (!dsTarget ||
-          !this.$.demo.contentWindow.document.contains(dsTarget)) {
-
+        if (!dsTarget) //||!this.$.demo.contentWindow.document.contains(dsTarget)) {
+          {
           dsTarget = this._dsTargets[key] = this.createDataSource(key);
         }
 
