Custom CSS variable support

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,13 +23,9 @@
     <div class="vertical-section-container centered">
       <h3>Basic t-demo-atom Demo</h3>
 
-       <t-demo-atom
-          el-name="t-button"
-          demo-file="../../t-button/demo/atom.html"
-          el-disp-name="button"
-          >
+       <t-demo-atom el-name="t-button" css-variables="icon-bg-color,primary-font-family,standard-border-radius,button-primary-bg-color,button-primary-text-color" >
              <t-button class="primary" raised label="label"></t-button>
-        </t-demo-atom>
+        </t-demo-atom> 
 
     </div>
 
