refresh setting method added

--- a/t-demo-atom.html
+++ b/t-demo-atom.html
@@ -532,7 +532,13 @@
         });
 
         return dsElement;
+      },
+
+      refreshSetting : function(){
+        this._initPropertyBinding();
       }
+
+
     });
   </script>
 </dom-module>
